refactor: make rest endpoints
