# controllers/AdminStatsController.php
@@ -6,8 +6,7 @@ class AdminStatsController
 {
     public static function getStatsByCourse($email)
     {
-        $data = json_decode(file_get_contents('php://input'), true);
-        $courseId = $data['course_id'];
+        $courseId = $_GET['params'][0];
 
         $stats = AdminService::getStatsByCourse($email, $courseId);
         http_response_code(200);
@@ -16,8 +15,7 @@ class AdminStatsController
 
     public static function getGeneratedRequirementsByCourse($email)
     {
-        $data = json_decode(file_get_contents('php://input'), true);
-        $courseId = $data['course_id'];
+        $courseId = $_GET['params'][0];
 
         $requirements = AdminService::getGeneratedRequirementsByCourse($email, $courseId);
         http_response_code(200);
