# controllers/GameController.php
@@ -6,9 +6,7 @@ class GameController
 {
     public static function prepareGameContent()
     {
-        $data = json_decode(file_get_contents('php://input'), true);
-        $roomCode = $data['roomCode'];
-
-        return GameService::prepareGameContent($roomCode);
+        $courseId = $_GET['params'][0];
+        return GameService::prepareGameContent($courseId);  
     }
 }
